fixed bug with fonts, fixed overflow

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   font-family: 'Lato';
   font-style: normal;
   font-weight: 400;
-  src: src('fonts/lato-v24-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url('/public/fonts/lato-v24-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* lato-700 - latin */
 @font-face {
@@ -12,7 +12,7 @@
   font-family: 'Lato';
   font-style: normal;
   font-weight: 700;
-  src: src('fonts/lato-v24-latin-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url('/public/fonts/lato-v24-latin-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
 html {
@@ -21,7 +21,7 @@ html {
 
 body {
   background: white;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Lato';
   font-weight: 400;
   line-height: 1.75;
   color: #000000;
@@ -69,7 +69,6 @@ small,
 body {
   margin: 0;
   background-color: #12171c;
-  overflow-x: hidden;
 }
 
 .wrapper {
